Fixing bugs in the form question

--- a/fe/.env_example
+++ b/fe/.env_example
@@ -1,2 +1,3 @@
 PORT=3013
 REACT_APP_API=http://api-system-test.topcode.fun/api/v1/
+REACT_URL_IMG=http://api-system-test.topcode.fun/api/v1/upload/
